<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DnevniPregled">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nazad"
            android:textColor="@color/dark_red"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="PreviousDan"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/mjesecDanText"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/Velj_2023"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:ignore="HardcodedText" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/naprijed"
            android:textColor="@color/dark_red"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="NextDan"
            android:textSize="20sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/dayOfWeekTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Utorak"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Novi_dogadaj"
        android:textColor="@color/dark_red"
        android:background="@null"
        android:textStyle="bold"
        android:onClick="newEventAction"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <ListView
        android:id="@+id/satiListView"
        android:layout_width="match_parent"
        android:background="@color/yellow"
        android:layout_height="0dp"
        android:layout_weight="5"/>

</LinearLayout>