<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UrediDogadaj">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/nazivDogadajaID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="text"/>

    <TextView
        android:id="@+id/datumDogadajaID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Date"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/vrijemeDogadajaID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Time"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Spremi"
        android:textColor="@color/dark_red"
        android:background="@null"
        android:textStyle="bold"
        android:onClick="spremiDogadaj"
        android:layout_gravity="center"
        android:textSize="20sp"/>

</LinearLayout>