<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Tjedan"
        android:textColor="@color/dark_red"
        android:background="@null"
        android:textStyle="bold"
        android:onClick="weeklyAction"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nazad"
            android:textColor="@color/dark_red"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="PreviousMjesec"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/mjesecGodinaID"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="Velj 2023"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:ignore="HardcodedText"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/naprijed"
            android:textColor="@color/dark_red"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="NextMjesec"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/PON"
            android:textColor="@color/dark_red"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/UTO"
            android:textColor="@color/dark_red"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SRI"
            android:textColor="@color/dark_red"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CET"
            android:textColor="@color/dark_red"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/PET"
            android:textColor="@color/dark_red"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SUB"
            android:textColor="@color/dark_red"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="NED"
            android:textColor="@color/dark_red"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>












